--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "dev": "nest start --watch",
     "start": "node dist/main.js",
     "start:prod": "NODE_ENV=production node dist/main.js",
-    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "lint": "eslint \"src\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:e2e": "jest --config ./test/jest-e2e.json",
@@ -38,7 +38,8 @@
     "cors": "2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
-    "drizzle-orm": "0.33.0",
+    "drizzle-orm": "0.44.5",
+    "express-rate-limit": "^8.1.0",
     "helmet": "7.1.0",
     "ioredis": "5.4.1",
     "jsonwebtoken": "9.0.2",
@@ -58,13 +59,16 @@
     "@nestjs/testing": "10.3.9",
     "@types/compression": "1.7.5",
     "@types/cookie-parser": "1.4.5",
+    "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
+    "@types/express-rate-limit": "^6.0.2",
     "@types/jest": "29.5.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "22.5.4",
     "@types/passport-jwt": "4.0.1",
     "@types/pg": "^8.15.5",
     "@types/supertest": "6.0.3",
-    "drizzle-kit": "0.30.2",
+    "drizzle-kit": "0.31.5",
     "jest": "29.7.0",
     "rimraf": "6.0.1",
     "ts-jest": "29.1.2",
