--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "lint": "eslint \"src\"",
     "test": "vitest",
     "dev": "pnpm build --watch",
     "format": "prettier --write src"
