--- a/package.json
+++ b/package.json
@@ -12,20 +12,31 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@types/node": "22.5.4",
+    "@typescript-eslint/eslint-plugin": "8.5.0",
+    "@typescript-eslint/parser": "8.5.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "concurrently": "8.2.2",
     "eslint": "9.9.0",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.7",
     "prettier": "3.3.3",
+    "supertest": "7.0.0",
+    "ts-node": "10.9.2",
     "typescript": "5.5.4",
-    "@typescript-eslint/eslint-plugin": "8.5.0",
-    "@typescript-eslint/parser": "8.5.0"
+    "typescript-eslint": "^8.44.1",
+    "vitest": "3.2.4"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
+    "zod": "3.23.8"
   }
 }
