--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,10 +11,8 @@
     "start": "node dist/main.js",
     "start:prod": "NODE_ENV=production node dist/main.js",
     "lint": "eslint \"src\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:cov": "jest --coverage",
+    "test": "vitest --run",
+    "test:e2e": "vitest --run -c vitest.e2e.config.ts",
     "migrate:generate": "drizzle-kit generate",
     "migrate:push": "drizzle-kit push",
     "seed": "ts-node --transpile-only src/db/seed.ts"
@@ -62,17 +60,17 @@
     "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
     "@types/express-rate-limit": "^6.0.2",
-    "@types/jest": "29.5.12",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "22.5.4",
     "@types/passport-jwt": "4.0.1",
     "@types/pg": "^8.15.5",
     "@types/supertest": "6.0.3",
     "drizzle-kit": "0.31.5",
-    "jest": "29.7.0",
     "rimraf": "6.0.1",
-    "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
-    "tsconfig-paths": "4.2.0"
+    "tsconfig-paths": "4.2.0",
+    "@vitest/coverage-v8": "3.2.4",
+    "pg-mem": "3.1.5",
+    "vitest": "3.2.4"
   }
 }
