--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "admin-panel-sma",
   "private": true,
   "version": "0.1.0",
+  "type": "module",
   "packageManager": "pnpm@9.7.1",
   "scripts": {
     "dev": "concurrently -n api,worker,admin -c green,magenta,cyan \"pnpm --filter @apps/api dev\" \"pnpm --filter @apps/worker dev\" \"pnpm --filter @apps/admin dev\"",
     "build": "pnpm -r build",
-    "lint": "pnpm -r lint",
+    "lint": "eslint .",
     "test": "pnpm -r test",
     "format": "pnpm -r format",
     "prepare": "husky install"
