--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,11 @@ JWT_ACCESS_SECRET=change-me-access
 JWT_REFRESH_SECRET=change-me-refresh
 JWT_ACCESS_TTL=900
 JWT_REFRESH_TTL=2592000
+CORS_ALLOWED_ORIGINS=http://localhost:5173,https://admin.example.sch.id
+AUTH_MAX_LOGIN_ATTEMPTS=5
+AUTH_LOCKOUT_DURATION=900
+ARGON2_MEMORY_COST=19456
+ARGON2_TIME_COST=2
 
 # Storage configuration
 STORAGE_DRIVER=supabase # or r2
