--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -4,8 +4,13 @@ JWT_ACCESS_SECRET=change-me
 JWT_REFRESH_SECRET=change-me
 JWT_ACCESS_TTL=900
 JWT_REFRESH_TTL=2592000
+CORS_ALLOWED_ORIGINS=https://admin.example.sch.id
+AUTH_MAX_LOGIN_ATTEMPTS=5
+AUTH_LOCKOUT_DURATION=900
+ARGON2_MEMORY_COST=19456
+ARGON2_TIME_COST=2
 STORAGE_DRIVER=supabase
-SUPABASE_URL=
+SUPABASE_URL= 
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_KEY=
 SUPABASE_BUCKET=
