--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -55,6 +55,7 @@
     "@nestjs/cli": "10.3.2",
     "@nestjs/schematics": "10.0.3",
     "@nestjs/testing": "10.3.9",
+    "@anatine/esbuild-decorators": "0.2.19",
     "@types/compression": "1.7.5",
     "@types/cookie-parser": "1.4.5",
     "@types/cors": "^2.8.19",
@@ -70,7 +71,8 @@
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
     "@vitest/coverage-v8": "3.2.4",
-    "pg-mem": "3.1.5",
-    "vitest": "3.2.4"
+    "pg-mem": "3.0.5",
+    "vitest": "3.2.4",
+    "vite-tsconfig-paths": "4.3.2"
   }
 }
