--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "packageManager": "pnpm@9.7.1",
   "scripts": {
-    "dev": "concurrently -n api,worker,admin -c green,magenta,cyan \"pnpm --filter @apps/api dev\" \"pnpm --filter @apps/worker dev\" \"pnpm --filter @apps/admin dev\"",
+    "dev": "cross-env CHOKIDAR_USEPOLLING=1 CHOKIDAR_INTERVAL=500 concurrently -n api,worker,admin -c green,magenta,cyan \"pnpm --filter @apps/api dev\" \"pnpm --filter @apps/worker dev\" \"pnpm --filter @apps/admin dev\"",
     "build": "pnpm -r build",
     "lint": "eslint .",
     "test": "pnpm -r test",
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "8.5.0",
     "@vitest/coverage-v8": "^3.2.4",
     "concurrently": "8.2.2",
+    "cross-env": "7.0.3",
     "eslint": "9.9.0",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.0.11",
