--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "packageManager": "pnpm@9.7.1",
   "scripts": {
-    "dev": "cross-env CHOKIDAR_USEPOLLING=1 CHOKIDAR_INTERVAL=500 concurrently -n api,worker,admin -c green,magenta,cyan \"pnpm --filter @apps/api dev\" \"pnpm --filter @apps/worker dev\" \"pnpm --filter @apps/admin dev\"",
+    "dev": "concurrently -n api,worker,admin -c green,magenta,cyan \"pnpm --filter @apps/api dev\" \"pnpm --filter @apps/worker dev\" \"pnpm --filter @apps/admin dev\"",
     "build": "pnpm -r build",
     "lint": "eslint .",
     "test": "pnpm -r test",
+    "typecheck": "tsc -b --pretty false",
     "format": "pnpm -r format",
     "prepare": "husky install"
   },
