fix(deployment): resolve Railway TypeScript module resolution errors
- Update tsconfig.json path aliases to point to source files (src/*) instead of dist/*
- Remove rootDir constraint to allow cross-package imports in monorepo
- Change baseUrl to workspace root (../../) for proper path resolution
- Update start scripts to match actual output structure (dist/api/src/main.js)
- Add comprehensive documentation of the fix in docs/RAILWAY_DEPLOYMENT_FIX.md

This fixes TS2307 'Cannot find module @shared/constants' errors during Railway deployment.
TypeScript requires source files for compilation, not compiled output.

Closes Railway deployment build failure.

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "../../",
     "outDir": "./dist",
-    "rootDir": "./src",
     "incremental": true,
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
     "paths": {
-      "@shared/*": ["../shared/dist/*"],
-      "@api/*": ["./src/*"]
+      "@shared/*": ["apps/shared/src/*"],
+      "@api/*": ["apps/api/src/*"]
     }
   },
   "include": ["src/**/*"],
