--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,8 +8,8 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "dev": "nest start --watch --preserveWatchOutput",
-    "start": "node dist/main.js",
-    "start:prod": "NODE_ENV=production node dist/main.js",
+    "start": "node dist/api/src/main.js",
+    "start:prod": "NODE_ENV=production node dist/api/src/main.js",
     "lint": "eslint \"src\"",
     "test": "vitest --run",
     "test:e2e": "vitest --run -c vitest.e2e.config.ts",
