--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "tsx --tsconfig tsconfig.json --env-file ../../.env src/index.ts",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/worker/src/index.js",
+    "start:prod": "NODE_ENV=production node dist/worker/src/index.js"
   },
   "dependencies": {
     "@apps/shared": "workspace:*",
