--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -5,17 +5,19 @@
   "scripts": {
     "dev": "tsx --tsconfig tsconfig.json --env-file ../../.env src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/worker/src/index.js",
-    "start:prod": "NODE_ENV=production node dist/worker/src/index.js"
+    "start": "node -r tsconfig-paths/register dist/worker/src/index.js",
+    "start:prod": "NODE_ENV=production node -r tsconfig-paths/register dist/worker/src/index.js"
   },
   "dependencies": {
     "@apps/shared": "workspace:*",
     "@aws-sdk/client-s3": "3.896.0",
     "bullmq": "4.18.3",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "0.44.5",
     "ioredis": "5.4.1",
     "nanoid": "5.0.7",
-    "pg": "8.11.5"
+    "pg": "8.11.5",
+    "tsconfig-paths": "4.2.0"
   },
   "devDependencies": {
     "@types/pg": "^8.15.5",
