fix(worker): add fallback to dist for runtime module resolution
- Update worker tsconfig paths: @shared/* now includes both src/* and dist/*
- Update API tsconfig paths for consistency
- Add fallback resolution: try src/* first (compile), then dist/* (runtime)

This fixes MODULE_NOT_FOUND error for '@shared/db/schema' at runtime.

Problem: tsconfig-paths was resolving to .ts source files, but Node.js
needs .js compiled files at runtime.

Solution: Add dist/* as fallback path. Now tsconfig-paths will:
1. Try apps/shared/src/db/schema (.ts) - fails at runtime
2. Fallback to apps/shared/dist/db/schema (.js) - SUCCESS!

This is the third fix needed for worker deployment:
1. Output path: dist/worker/src/index.js
2. Runtime resolver: tsconfig-paths
3. Compiled files: dist/* fallback path

Worker now fully operational! 🚀

--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -8,7 +8,7 @@
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
     "baseUrl": "../../",
     "paths": {
-      "@shared/*": ["apps/shared/src/*"],
+      "@shared/*": ["apps/shared/src/*", "apps/shared/dist/*"],
       "@api/*": ["apps/api/src/*"],
       "@worker/*": ["apps/worker/src/*"]
     }
