fix(worker): use relative paths for module resolution in tsconfig
Removes 'baseUrl' and updates 'paths' to be fully relative from the tsconfig.json file location.

This prevents tsconfig-paths from creating incorrect absolute paths in the Railway build environment, which was causing the 'Cannot find module @shared/db/schema' runtime error.

The new paths are now more explicit and less dependent on the execution context's base directory.

--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -6,11 +6,10 @@
     "outDir": "dist",
     "incremental": true,
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
-    "baseUrl": "../../",
     "paths": {
-      "@shared/*": ["apps/shared/src/*", "apps/shared/dist/*"],
-      "@api/*": ["apps/api/src/*"],
-      "@worker/*": ["apps/worker/src/*"]
+      "@shared/*": ["../../apps/shared/src/*", "../../apps/shared/dist/*"],
+      "@api/*": ["../../apps/api/src/*"],
+      "@worker/*": ["../../apps/worker/src/*"]
     }
   },
   "include": ["src/**/*"]
