--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -6,10 +6,11 @@
     "outDir": "dist",
     "incremental": true,
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
+    "baseUrl": "../../",
     "paths": {
-      "@shared/*": ["../../apps/shared/src/*", "../../apps/shared/dist/*"],
-      "@api/*": ["../../apps/api/src/*"],
-      "@worker/*": ["../../apps/worker/src/*"]
+      "@shared/*": ["apps/shared/src/*", "apps/shared/dist/*"],
+      "@api/*": ["apps/api/src/*"],
+      "@worker/*": ["apps/worker/src/*"]
     }
   },
   "include": ["src/**/*"]
