--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "5.3.7",
+    "@apps/shared": "workspace:*",
     "@refinedev/antd": "5.47.0",
     "@refinedev/core": "4.58.0",
     "@refinedev/react-router-v6": "4.6.2",
