fix: Vercel monorepo deployment configuration
- Add vercel.json in apps/admin for monorepo support
- Update root vercel.json with correct paths
- Update README with detailed Vercel deployment instructions:
  - Root Directory must be set to apps/admin
  - Build commands must cd to root for pnpm workspace
  - Add troubleshooting for 'No Output Directory' error

This fixes deployment by properly configuring Vercel for monorepo
structure where admin app is in apps/admin subdirectory.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "pnpm --filter @apps/shared build && pnpm --filter @apps/admin build",
+  "buildCommand": "pnpm install && pnpm --filter @apps/shared build && pnpm --filter @apps/admin build",
   "outputDirectory": "apps/admin/dist",
-  "framework": null,
   "installCommand": "pnpm install"
 }
