fix: convert worker to ESM for compatibility with shared package
Changes:
- Convert worker package to ESM (type: module)
- Update all imports from @shared/* to @apps/shared/*
- Add .js extensions to all relative imports for ESM
- Update tsconfig.json to use ESNext and Bundler resolution
- Add tsc-alias to both shared and worker builds
- Fix all barrel exports in shared package with .js extensions

This resolves the 'exports is not defined in ES module scope' error
by ensuring all packages (shared, admin, worker) use consistent ESM
format throughout the monorepo.

Tested: All packages build successfully

--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -33,7 +33,7 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "lint": "eslint \"src\"",
     "test": "vitest",
     "dev": "pnpm build --watch",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/pg": "8.15.5",
+    "tsc-alias": "^1.8.10",
     "tslib": "2.6.3",
     "vitest": "1.6.0"
   }
