--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -2,11 +2,12 @@
   "name": "@apps/worker",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "tsx --tsconfig tsconfig.json --env-file ../../.env src/index.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node -r tsconfig-paths/register dist/worker/src/index.js",
-    "start:prod": "NODE_ENV=production node -r tsconfig-paths/register dist/worker/src/index.js"
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "start": "node dist/index.js",
+    "start:prod": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@apps/shared": "workspace:*",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/pg": "^8.15.5",
+    "tsc-alias": "^1.8.10",
     "tsx": "4.19.0"
   }
 }
