--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prebuild": "pnpm --filter @apps/shared build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
