--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test": "pnpm -r test",
     "typecheck": "tsc -b --pretty false",
     "format": "pnpm -r format",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "compose:up": "docker compose -f docker-compose.dev.yml up -d --remove-orphans",
+    "compose:seed": "docker compose -f docker-compose.dev.yml -f docker-compose.seed.yml up --abort-on-container-exit --exit-code-from seed --remove-orphans",
+    "compose:down": "docker compose -f docker-compose.dev.yml down --remove-orphans",
+    "compose:dev": "docker compose -f docker-compose.dev.yml -f docker-compose.dev.override.yml up --build --remove-orphans",
+    "print-superadmin": "node scripts/print-superadmin.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
