--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "main": "dist/main.js",
+  "main": "dist/api/src/main.js",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "dev": "nest start --watch --preserveWatchOutput",
+    "dev": "ts-node -r tsconfig-paths/register src/main.ts",
     "start": "node dist/api/src/main.js",
     "start:prod": "NODE_ENV=production node dist/api/src/main.js",
     "lint": "eslint \"src\"",
