--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prebuild": "pnpm --filter @apps/shared build",
     "dev": "vite",
+    "test": "vitest",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
@@ -27,8 +28,22 @@
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.3.1",
+    "msw": "^2.10.2",
+    "vitest": "^3.2.4",
     "tslib": "2.6.3",
     "typescript": "5.5.4",
     "vite": "5.4.8"
+  },
+  "vitest": {
+    "setupFiles": [
+      "./test/setupTests.ts"
+    ],
+    "globals": true,
+    "environment": "jsdom"
+  },
+  "msw": {
+    "workerDirectory": [
+      "apps/admin/public"
+    ]
   }
 }
