--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -7,7 +7,7 @@
     "prebuild": "pnpm --filter @apps/shared build",
     "dev": "vite",
     "test": "vitest",
-    "build": "vite build",
+    "build": "vite build --target es2022",
     "preview": "vite preview"
   },
   "dependencies": {
