--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ant-design/icons": "5.3.7",
     "@apps/shared": "workspace:*",
+    "@dnd-kit/core": "6.1.0",
     "@refinedev/antd": "5.47.0",
     "@refinedev/core": "4.58.0",
     "@refinedev/react-router-v6": "4.6.2",
