feat: Resolve build errors by standardizing path aliases and module resolution

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "prebuild": "pnpm --filter @apps/shared build",
+    "prebuild": "",
     "dev": "vite",
     "test": "vitest",
     "build": "vite build --target es2022",
