--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx --tsconfig tsconfig.json --env-file ../../.env src/index.ts",
-    "build": "pnpm --filter @apps/shared build && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
-    "build:railway": "cd ../.. && pnpm --filter @apps/shared build && pnpm --filter @apps/worker build:local",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "build:railway": "cd ../.. && pnpm --filter @apps/worker build:local",
     "build:local": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node dist/index.js",
     "start:prod": "NODE_ENV=production node dist/index.js"
