--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,6 +14,10 @@
     "@ant-design/icons": "5.3.7",
     "@apps/shared": "workspace:*",
     "@dnd-kit/core": "6.1.0",
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@mui/icons-material": "5.16.6",
+    "@mui/material": "5.16.6",
     "@refinedev/antd": "5.47.0",
     "@refinedev/core": "4.58.0",
     "@refinedev/react-router-v6": "4.6.2",
@@ -21,15 +25,19 @@
     "antd": "5.25.0",
     "axios": "1.7.7",
     "dayjs": "1.11.13",
+    "lucide-react": "0.456.0",
     "papaparse": "5.4.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.26.2"
+    "react-router-dom": "6.26.2",
+    "recharts": "2.12.7"
   },
   "devDependencies": {
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.3.1",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.0.1",
     "msw": "^2.10.2",
     "vitest": "^3.2.4",
     "tslib": "2.6.3",
