--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "main": "dist/api/src/main.js",
+  "main": "dist/main.js",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "dev": "ts-node -r tsconfig-paths/register src/main.ts",
+    "dev": "nest start --watch --preserveWatchOutput",
     "start": "node dist/api/src/main.js",
     "start:prod": "NODE_ENV=production node dist/api/src/main.js",
     "lint": "eslint \"src\"",
@@ -15,8 +15,8 @@
     "test:e2e": "vitest --run -c vitest.e2e.config.ts",
     "migrate:generate": "drizzle-kit generate",
     "migrate:push": "drizzle-kit push",
-    "seed": "tsx src/db/seed.ts",
-    "db:reset": "drizzle-kit push --force && tsx src/db/seed.ts"
+    "seed": "ts-node -r tsconfig-paths/register src/db/seed.ts",
+    "db:reset": "drizzle-kit push --force && ts-node -r tsconfig-paths/register src/db/seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.896.0",
@@ -71,7 +71,6 @@
     "rimraf": "6.0.1",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "tsx": "4.19.0",
     "@vitest/coverage-v8": "3.2.4",
     "pg-mem": "3.0.5",
     "vitest": "3.2.4",
