chore: stabilize linting and ci workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request: {}
 
 jobs:
-  build-test:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -16,13 +16,38 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile
       - run: pnpm lint
-      - run: pnpm -r build
+
+  test:
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm typecheck
       - run: pnpm -r test
 
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm -r build
+
   migrate:
-    needs: build-test
+    needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && secrets.DATABASE_URL != ''
     env:
@@ -34,5 +59,5 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
-      - run: pnpm install --filter @apps/api
+      - run: pnpm install --filter @apps/api --frozen-lockfile
       - run: pnpm --filter @apps/api migrate:push
