--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "",
     "dev": "vite",
-    "test": "vitest",
+    "test": "vitest run",
     "build": "vite build --target es2022",
     "preview": "vite preview"
   },
@@ -33,16 +33,17 @@
     "recharts": "2.12.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.0.1",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.3.1",
-    "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.0.1",
+    "jsdom": "^27.0.1",
     "msw": "^2.10.2",
-    "vitest": "^3.2.4",
     "tslib": "2.6.3",
     "typescript": "5.5.4",
-    "vite": "5.4.8"
+    "vite": "5.4.8",
+    "vitest": "^3.2.4"
   },
   "vitest": {
     "setupFiles": [
