--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "lint": "eslint \"src\"",
-    "test": "vitest",
+    "test": "vitest run",
     "dev": "pnpm build --watch",
     "format": "prettier --write src"
   },
